sidebar display on mobile fixed

--- a/your_nutritionist/frontend/src/Components/Home/TrendingCard/TrendingCard.scss
+++ b/your_nutritionist/frontend/src/Components/Home/TrendingCard/TrendingCard.scss
@@ -54,3 +54,9 @@ $padding: 0.5rem;
 		}
 	}
 }
+
+@media (max-width: 800px) {
+	.trending-card-wrapper {
+		display: none;
+	}
+}
