--- a/your_nutritionist/frontend/src/Components/Util/SideBar/SideBar.scss
+++ b/your_nutritionist/frontend/src/Components/Util/SideBar/SideBar.scss
@@ -1,7 +1,7 @@
 .side-bar-wrapper {
 	border-radius: 18px;
 	// border: solid 1px rgba(173, 173, 173, 0.322);
-	padding: .5rem;
+	padding: 0.5rem;
 	align-items: center;
 	display: flex;
 	flex-direction: column;
@@ -9,7 +9,7 @@
 		font-size: 12pt;
 	}
 	.side-bar-create {
-		margin: .25rem;
+		margin: 0.25rem;
 		border: solid 1px rgb(56, 209, 176);
 		border-radius: 18px;
 		width: 10vw;
@@ -23,8 +23,12 @@
 	}
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
 	.side-bar-wrapper {
-		display: none;
+		position: relative;
+		display: flex;
+		.side-bar-create {
+			width: 80vw;
+		}
 	}
 }
