--- a/your_nutritionist/frontend/src/Containers/SideBar/SideBarContainer.scss
+++ b/your_nutritionist/frontend/src/Containers/SideBar/SideBarContainer.scss
@@ -9,6 +9,11 @@
 
 @media (max-width: 800px) {
 	.sidebar-container {
-		display: none;
+		position: relative;
+		display: grid;
+		top: 0;
+		left: 0;
+		margin-bottom: 2rem;
+		width: auto;
 	}
 }
